--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,4 +9,10 @@ html
   body
     block topnav
       include ./topnav
+    if flashMessages
+      each texts, type in flashMessages
+        .container
+          .alert(class='alert-#{type}')
+            each msg in texts
+              p= msg   
     block content
