--- a/views/topnav.jade
+++ b/views/topnav.jade
@@ -5,7 +5,7 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href="#") WebSiteName
+      a.navbar-brand(href="#") MyHomePage
     .collapse.navbar-collapse#myNavbar
       ul.nav.navbar-nav
         li
@@ -17,12 +17,14 @@
         li
           a(href="#") Page 3
       ul.nav.navbar-nav.navbar-right
-        li
-          a(href="#")
-            span.glyphicon.glyphicon-user
-            |  Sign Up
-        li
-          a(href="#")
-            span.glyphicon.glyphicon-log-in
-            |  Login
+        if (!currentUser) 
+          li
+            a(href='/signUp') Sign UP
+          li
+            a(href='/logIn') Log In
+        else
+          li
+            a(href='#') Profile
+          li
+            a(href='#') Signout
 br
