--- a/views/topnav.jade
+++ b/views/topnav.jade
@@ -19,9 +19,9 @@
       ul.nav.navbar-nav.navbar-right
         if (!currentUser) 
           li
-            a(href='/signUp') Sign UP
+            a(href='/signup') Sign UP
           li
-            a(href='/logIn') Log In
+            a(href='/login') Log In
         else
           li
             a(href='#') Profile
