--- a/views/topnav.jade
+++ b/views/topnav.jade
@@ -19,7 +19,7 @@
       ul.nav.navbar-nav.navbar-right
         if (!currentUser) 
           li
-            a(href='/signup') Sign UP
+            a(href='/signup') Sign Up
           li
             a(href='/login') Log In
         else
