--- a/views/topnav.jade
+++ b/views/topnav.jade
@@ -26,5 +26,5 @@
           li
             a(href='#') Profile
           li
-            a(href='#') Signout
+            a(href='/logout') Log out
 br
