--- a/views/topnav.jade
+++ b/views/topnav.jade
@@ -24,7 +24,7 @@
             a(href='/login') Log In
         else
           li
-            a(href='#') Profile
+            a(href='/users') Profile
           li
             a(href='/logout') Log out
 br
