--- a/views/signUp.jade
+++ b/views/signUp.jade
@@ -11,7 +11,7 @@ block content
         label(for='password') Password
         input.form-control(type='password', id='password', name='password', placeholder='Password')
       .form-group
-        label(for='password_confirmation') Password 확인
+        label(for='pwCheck') Password 확인
         input.form-control(type='password', id='pwCheck', name='pwCheck', placeholder='Password')
       .form-group
         label(for='name') Name
