--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -9,6 +9,6 @@ block content
       li 이메일: #{user.email}
     hr
     p
-      a.btn.btn-default(href='#') 수정
+      a.btn.btn-default(href='/users/edit') 수정
       | 
-      a.btn.btn-default(href='#') 삭제
+      a.btn.btn-default(href='/users/delete') 삭제
