--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -11,4 +11,7 @@ block content
     p
       a.btn.btn-default(href='/users/edit') 수정
       | 
-      a.btn.btn-default(href='/users/delete') 삭제
+      a.btn.btn-default(href='#', id="userDelete") 삭제
+      
+      
+  script(type='text/javascript', src='/javascripts/users/profile.js')
