--- a/views/topnav.jade
+++ b/views/topnav.jade
@@ -9,7 +9,7 @@
     .collapse.navbar-collapse#myNavbar
       ul.nav.navbar-nav
         li
-          a(href="#") Home
+          a(href="/posts") 게시판
         li
           a(href="#") Page 1
         li
