--- a/views/logIn.jade
+++ b/views/logIn.jade
@@ -17,6 +17,8 @@ block content
       p
       button.btn.btn-lg.btn-primary.btn-block(type='submit') 로그인
       | 
+      a.btn.btn-info.btn-lg.btn-block.fbBtn(href='/auth/facebook')
+        | facebook 로그인
       hr
       a.btn.btn-default.btn-mini(href='/signup') 회원가입
       | 
