--- a/views/logIn.jade
+++ b/views/logIn.jade
@@ -19,6 +19,8 @@ block content
       | 
       a.btn.btn-info.btn-lg.btn-block.fbBtn(href='/auth/facebook')
         | facebook 로그인
+      a.btn.btn-danger.btn-lg.btn-block.fbBtn(href='/auth/google')
+        | google 로그인
       hr
       a.btn.btn-default.btn-mini(href='/signup') 회원가입
       | 
