--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -10,6 +10,8 @@ block content
       if user.facebook.id
       li Facebook 
         img.img-circle(src='#{user.facebook.photo}')
+      li Google 
+        img.img-circle(src='#{user.google.photo}')
     hr
     p
       a.btn.btn-default(href='/users/edit') 수정
